--- a/source/less/blocks/input-field.less
+++ b/source/less/blocks/input-field.less
@@ -14,34 +14,35 @@
 }
 
 .input-field__label--atop {
-  padding-left: 22px;
   width: 100%;
+  padding-left: 22px;
 }
 
 .input-field__string {
   flex-grow: 1;
-  padding: 12px 18px;
   width: 140px;
-  border: 4px solid #f2f2f2;
-  background-color: #f2f2f2;
+  padding: 12px 18px;
   font-size: @font-size-title;
   line-height: @line-height-title;
+  color: @color-title;
   font-weight: 700;
+  background-color: #f2f2f2;
+  border: 4px solid #f2f2f2;
 
   &::placeholder {
     color: @color-title;
   }
 
   &:hover {
-    border-color: #e5e5e5;
     background-color: #e5e5e5;
+    border-color: #e5e5e5;
     outline: 0;
   }
 
   &:focus,
   &active {
-    border-color: #e5e5e5;
     background-color: #ffffff;
+    border-color: #e5e5e5;
     outline: 0;
   }
 }
@@ -78,15 +79,15 @@
   }
 
   .feedback__form-wrapper--contacts .input-field__string {
+    width: 257px;
     margin-top: 0;
-    min-width: 257px;
   }
 
   .feedback__form-wrapper--contacts .input-field__label--atop {
     align-self: center;
-    padding: 0;
+    width: auto;
     margin-right: 16px;
-    width: fit-content;
+    padding: 0;
 
     & span {
       display: none;
