Исправляет мобильное меню в ie

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -28,7 +28,7 @@
   display: inline;
 }
 
-@media (max-width: calc(@tablet-width - 1px)) {
+@media (max-width: @tablet-width - 1px) {
   .main-nav--closed .main-nav__wrapper {
     display: none;
   }
