Выравнивает элементы страниц по макету

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,16 +1,16 @@
 .copyright {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .copyright__text {
   margin: 0;
+  line-height: @line-height-title;
 }
 
 .copyright__link {
-  margin-left: 6px;
-  color: inherit;
+  margin-top: -3px;
+  margin-left: 11px;
   text-decoration: none;
 }
 
