--- a/source/less/blocks/input-field.less
+++ b/source/less/blocks/input-field.less
@@ -25,7 +25,7 @@
   font-size: @font-size-title;
   line-height: @line-height-title;
   color: @color-title;
-  font-weight: 700;
+  font-weight: bold;
   background-color: #f2f2f2;
   border: 4px solid #f2f2f2;
 
@@ -86,10 +86,11 @@
   .feedback__form-wrapper--contacts .input-field__label--atop {
     align-self: center;
     width: auto;
+    max-width: 150px;
     margin-right: 16px;
     padding: 0;
 
-    & span {
+    span {
       display: none;
     }
   }
