--- a/source/less/blocks/main-question.less
+++ b/source/less/blocks/main-question.less
@@ -1,11 +1,17 @@
 .main-question {
-  .text-extra;
+  .text-extra();
   margin: 0;
   text-align: center;
+
+  .video__question& {
+    font-size: @font-size-title;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .main-question {
-    font-size: 30px;
+    .page-main & {
+      font-size: 30px;
+    }
   }
 }
