--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -23,10 +23,10 @@
   margin: 0;
   font-size: @font-size-title;
   line-height: @line-height-title;
-  font-weight: 700;
+  font-weight: bold;
   color: @color-title;
 
-  & br {
+  br {
     display: none;
   }
 }
@@ -102,11 +102,11 @@
     font-size: 30px;
     line-height: 40px;
 
-    & span {
+    span {
       display: none;
     }
 
-    & br {
+    br {
       display: inline;
     }
   }
