--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -3,16 +3,16 @@
 }
 
 .page-footer__wrapper {
-  padding: 36px @side-padding 27px;
+  padding: 36px @side-padding 23px;
 }
 
 .page-footer__hashtag {
-  .text-extra;
+  .text-extra();
   margin: 0;
 }
 
 .page-footer__social {
-  .list-style-none;
+  .list-style-none();
   margin-top: 36px;
 }
 
