--- a/source/less/blocks/photo-gallery.less
+++ b/source/less/blocks/photo-gallery.less
@@ -3,7 +3,7 @@
 }
 
 .photo-gallery__tiles {
-  .list-style-none;
+  .list-style-none();
   font-size: @font-size-base;
   line-height: @line-height-additional;
 }
