--- a/source/less/blocks/photo-item.less
+++ b/source/less/blocks/photo-item.less
@@ -10,7 +10,7 @@
 .photo-item__title {
   margin: 15px 0  0;
   font-size: @font-size-base;
-  font-weight: 700;
+  font-weight: bold;
   color: @color-title;
 }
 
@@ -34,8 +34,9 @@
 }
 
 .photo-item__like-count {
+  margin: 2px 0 -2px;
   line-height: @line-height-additional;
-  font-weight: 700;
+  font-weight: bold;
   color: @color-title;
 }
 
@@ -61,13 +62,17 @@
   }
 
   .photo-item__like-btn {
-    min-width: 70px;
-    margin-top: 4px;
+    min-width: 65px;
+    margin-top: 2px;
   }
 
   .photo-item__like-icon {
     margin-right: 10px;
     fill: #a9a9a9;
+  }
+
+  .photo-item__like-count {
+    margin: 1px 0 -1px;
   }
 }
 
