--- a/source/less/blocks/recommended-list.less
+++ b/source/less/blocks/recommended-list.less
@@ -1,5 +1,5 @@
 .recommended-list {
-  .list-style-none;
+  .list-style-none();
   max-width: 320px;
   margin: 0 auto;
   padding-top: 15px;
@@ -46,7 +46,7 @@
   margin: 14px 0 0 0;
   text-align: left;
 
-  & br {
+  br {
     display: none;
   }
 }
@@ -104,11 +104,11 @@
     margin-top: 21px;
     text-align: center;
 
-    & span {
+    span {
       display: none;
     }
 
-    & br {
+    br {
       display: inline;
     }
   }
