--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,14 +1,14 @@
 .text-base() {
   font-size: @font-size-base;
   line-height: @line-height-base;
-  font-weight: 400;
+  font-weight: normal;
   color: @color-base;
 }
 
 .text-title() {
   font-size: @font-size-title;
   line-height: @line-height-title;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
   color: @color-title;
 }
@@ -16,13 +16,13 @@
 .text-menu() {
   font-size: @font-size-title;
   line-height: @line-height-menu;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .text-extra() {
   font-size: @font-size-extra;
   line-height: @line-height-title;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
   color: @color-title;
 }
