--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,9 +3,10 @@
   padding: 16px 0;
   font-size: @font-size-extra;
   line-height: @line-height-title;
-  font-weight: 700;
+  font-weight: bold;
   color: @color-contrast;
   text-align: center;
+  text-transform: uppercase;
   text-decoration: none;
   background-color: @color-feature;
   border: none;
@@ -21,6 +22,14 @@
   }
 }
 
-.button--disabled {
+button[disabled] {
   background-color: @button-disabled;
+}
+
+button[disabled].video__control {
+  background-color: transparent;
+
+  svg {
+    fill-opacity: 0.3;
+  }
 }
