--- a/source/less/blocks/main-offer.less
+++ b/source/less/blocks/main-offer.less
@@ -4,7 +4,11 @@
   line-height: @line-height-additional;
   text-align: center;
 
-  & br {
+  .video__main-offer& {
+    margin-top: 26px;
+  }
+
+  br {
     display: none;
   }
 }
@@ -14,18 +18,16 @@
     max-width: 458px;
     margin-top: 31px;
 
-    & span {
+    .video__main-offer& {
+      margin-top: 30px;
+    }
+
+    span {
       display: none;
     }
 
-    & br {
+    br {
       display: inline;
     }
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .main-offer {
-    margin-top: 35px;
   }
 }
