--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -3,7 +3,7 @@
 }
 
 .video__wrapper {
-  padding: 34px 0 0;
+  padding: 33px 0 39px;
 }
 
 .video__image {
@@ -13,10 +13,9 @@
 }
 
 .video__volume-scale-container {
-  position: absolute;
-  top: -45px;
-  left: 0;
-  max-width: 280px;
+  order: -1;
+  width: 280px;
+  margin: 0 -5px;
   padding: 22px 22px 20px;
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -34,15 +33,17 @@
   left: 36px;
   width: 9px;
   height: 9px;
+  padding: 0;
+  border: none;
   border-radius: 50%;
   background-color: #ffffff;
 }
 
 .video__controls-wrapper {
-  position: relative;
   display: flex;
+  flex-wrap: wrap;
   max-width: 280px;
-  margin: 0 auto;
+  margin: -45px auto 0;
   padding: 0 5px;
   background-color: #f2f2f2;
 }
@@ -52,7 +53,7 @@
   justify-content: center;
   align-items: center;
   width: 56px;
-  height: 60px;
+  height: 66px;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -64,15 +65,15 @@
   &:last-child {
     margin-left: 1px;
   }
-}
 
-.video__control svg {
-  fill: #5c6870;
+  svg {
+    fill: #5c6870;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .video__wrapper {
-    padding: 71px 0 0;
+    padding: 67px 0 40px;
   }
 
   .video__image {
@@ -80,6 +81,7 @@
   }
 
   .video__controls-wrapper {
+    position: relative;
     max-width: 648px;
     margin-top: -93px;
     padding: 0 23px 0 15px;
@@ -87,8 +89,8 @@
   }
 
   .video__volume-scale-container {
-    position: static;
-    max-width: 390px;
+    order: 0;
+    width: 389px;
     margin: 0 30px 0 22px;
     padding: 45px 0;
     background-color: transparent;
@@ -104,24 +106,36 @@
 
   .video__control {
     height: 93px;
-  }
 
-  .video__control:first-child {
-    margin-right: 0;
-  }
+    &:first-child {
+      margin-right: 0;
+    }
 
-  .video__control svg {
-    fill: #ffffff;
+    svg {
+      fill: #ffffff;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
+  .photo-item__footer {
+    padding: 15px 21px 17px;
+  }
+
+  .video__wrapper {
+    padding: 71px 0 85px;
+  }
+
+  .video__image {
+    margin-top: 71px;
+  }
+
   .video__controls-wrapper {
     max-width: 800px;
   }
 
   .video__volume-scale-container {
-    max-width: 540px;
+    width: 540px;
   }
 
   .video__volume-scale {
