--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -8,30 +8,26 @@
 }
 
 .location__map {
-  margin: 0 auto;
-  display: block;
-  width: 320px;
+  width: 100%;
   height: 350px;
+  position: relative;
 }
 
-.location__wrapper::before {
-  content: "";
-  position: absolute;
-  top: calc(50% - 13px);
-  left: calc(50% - 13px);
-  display: block;
-  width: 27px;
-  height: 27px;
-  background: url("/img/icon-map-marker.svg");
+.location__google-maps {
+  height: 350px;
+
+  .gm-style-mtc,
+  .gmnoprint,
+  .gm-svpc,
+  .gm-fullscreen-control,
+  .gm-style-cc {
+    display: none;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .location__wrapper {
     background-color: #f4f3ef;
-  }
-
-  .location__map {
-    width: 768px;
   }
 }
 
@@ -39,9 +35,5 @@
   .location {
     max-width: 1200px;
     margin: 0 auto;
-  }
-
-  .location__map {
-    width: 1200px;
   }
 }
