Исправляет глубину вложенности селекторов

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -74,10 +74,6 @@
   }
 }
 
-.features__title--top-feature .features__description br {
-  display: none;
-}
-
 .features__tile--top-feature .features__description {
   max-width: 270px;
 }
@@ -172,7 +168,8 @@
     max-width: 100%;
   }
 
-  .features__title--top-feature .features__description {
+  .features__title,
+  .features__description {
     br {
       display: inline;
     }
