--- a/source/less/blocks/input-field.less
+++ b/source/less/blocks/input-field.less
@@ -90,10 +90,10 @@
     max-width: 150px;
     margin-right: 16px;
     padding: 0;
+  }
 
-    span {
-      display: none;
-    }
+  .input-field__label--atop span {
+    display: none;
   }
 
   .input-field__icon {
