--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -167,7 +167,9 @@
   .page-cover .page-cover__description {
     max-width: 500px;
     margin-top: 31px;
+  }
 
+  .page-cover__description {
     span {
       display: none;
     }
