--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -19,25 +19,18 @@
   background: url("/img/icon-map-marker.svg");
 }
 
-.location__map-picture {
-  display: none;
-
-  .location--nojs & {
-    display: block;
-  }
-}
-
-.location__img {
-  display: block;
-  margin: 0 auto;
-  width: 320px;
-  height: 350px;
-}
-
 .location__map {
   width: 100%;
   height: 350px;
   position: relative;
+  background-image: url("/img/bg-map-mobile@1x.jpg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+    background-image: url("/img/bg-map-mobile@2x.jpg");
+  }
 }
 
 .location__google-maps {
@@ -61,8 +54,12 @@
     background-color: #f4f3ef;
   }
 
-  .location__img {
-    width: 768px;
+  .location__map {
+    background-image: url("/img/bg-map-tablet@1x.jpg");
+
+    @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+      background-image: url("/img/bg-map-tablet@2x.jpg");
+    }
   }
 }
 
@@ -72,7 +69,11 @@
     margin: 0 auto;
   }
 
-  .location__img {
-    width: 1200px;
+  .location__map {
+    background-image: url("/img/bg-map-desktop@1x.jpg");
+
+    @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
+      background-image: url("/img/bg-map-desktop@2x.jpg");
+    }
   }
 }
