Исправляет анимацию попапа

--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -15,6 +15,24 @@
   animation: bounce 0.5s;
 }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(800px);
+  }
+
+  70% {
+    transform: translateY(-20px);
+  }
+
+  90% {
+    transform: translateY(10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .modal__mesage-wrapper {
   padding: 39px 42px 24px;
 }
