Меняет ссылки в проекте на относительные
Производит замену абсолютных ссылок на относительные для простоты
тестирования билдов без участия сервера.

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -8,12 +8,12 @@
   right: 20px;
   width: 23px;
   height: 22px;
-  background: url("/img/icon-cross.svg") no-repeat center;
+  background: url("../img/icon-cross.svg") no-repeat center;
   border: 0;
 }
 
 .main-nav--closed .main-nav__menu-btn {
-  background: url("/img/icon-menu.svg") no-repeat center;
+  background: url("../img/icon-menu.svg") no-repeat center;
 }
 
 .main-nav--nojs .main-nav__menu-btn {
