--- a/source/less/blocks/page-cover.less
+++ b/source/less/blocks/page-cover.less
@@ -29,14 +29,14 @@
 .page-cover__image {
   position: relative;
   overflow: hidden;
-  background-image: url("/img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-color: #8fa2b1;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 
   @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-    background-image: url("/img/bg-back-mobile@2x.jpg");
+    background-image: url("../img/bg-back-mobile@2x.jpg");
   }
 }
 
@@ -121,11 +121,11 @@
   }
 
   .page-cover__image {
-    background-image: url("/img/bg-back-tablet@1x.jpg");
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: cover;
 
     @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-      background-image: url("/img/bg-back-tablet@2x.jpg");
+      background-image: url("../img/bg-back-tablet@2x.jpg");
     }
   }
 
@@ -194,10 +194,10 @@
   }
 
   .page-cover__image {
-    background-image: url("/img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/bg-back-desktop@1x.jpg");
 
     @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-      background-image: url("/img/bg-back-desktop@2x.jpg");
+      background-image: url("../img/bg-back-desktop@2x.jpg");
     }
   }
 
