--- a/source/less/blocks/location.less
+++ b/source/less/blocks/location.less
@@ -16,20 +16,20 @@
   display: block;
   width: 27px;
   height: 27px;
-  background: url("/img/icon-map-marker.svg");
+  background: url("../img/icon-map-marker.svg");
 }
 
 .location__map {
   width: 100%;
   height: 350px;
   position: relative;
-  background-image: url("/img/bg-map-mobile@1x.jpg");
+  background-image: url("../img/bg-map-mobile@1x.jpg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 
   @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-    background-image: url("/img/bg-map-mobile@2x.jpg");
+    background-image: url("../img/bg-map-mobile@2x.jpg");
   }
 }
 
@@ -55,10 +55,10 @@
   }
 
   .location__map {
-    background-image: url("/img/bg-map-tablet@1x.jpg");
+    background-image: url("../img/bg-map-tablet@1x.jpg");
 
     @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-      background-image: url("/img/bg-map-tablet@2x.jpg");
+      background-image: url("../img/bg-map-tablet@2x.jpg");
     }
   }
 }
@@ -70,10 +70,10 @@
   }
 
   .location__map {
-    background-image: url("/img/bg-map-desktop@1x.jpg");
+    background-image: url("../img/bg-map-desktop@1x.jpg");
 
     @media (min-resolution: @dpi-2x), (min-resolution: @dppx-2x) {
-      background-image: url("/img/bg-map-desktop@2x.jpg");
+      background-image: url("../img/bg-map-desktop@2x.jpg");
     }
   }
 }
