--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -3,7 +3,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/ptsans.woff2") format("woff2"), url("/fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-display: swap;
-  src: url("/fonts/ptsansbold.woff2") format("woff2"), url("/fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
 }
 
 body {
